--- a/Walls_Dustin_Project 3 Part 1.ipynb
+++ b/Walls_Dustin_Project 3 Part 1.ipynb
@@ -237,11 +237,9 @@
    },
    "outputs": [],
    "source": [
-    "# converted the 'startYear' column to integer using the pd.to_numeric() method.\n",
+    "basics_df['startYear'] = pd.to_numeric(basics_df['startYear'], errors='coerce').astype(float)\n",
     "\n",
-    "# https://pandas.pydata.org/docs/reference/api/pandas.to_numeric.html\n",
-    "\n",
-    "basics_df['startYear'] = pd.to_numeric(basics_df['startYear'], errors='coerce')\n",
+    "#basics_df['startYear'] = basics_df['startYear'].astype(float)\n",
     "\n",
     "basics_df = basics_df[(basics_df['startYear'] >= 2000) & (basics_df['startYear'] <= 2022)]"
    ]
@@ -265,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "basics_df = basics_df[~basics_df['genres'].str.contains('Documentary')]"
+    "basics_df = basics_df[~basics_df['genres'].str.contains('documentary')]"
    ]
   },
   {
@@ -425,21 +423,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 86210 entries, 34803 to 9730848\n",
+      "Int64Index: 120058 entries, 34803 to 9730848\n",
       "Data columns (total 9 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   tconst          86210 non-null  object \n",
-      " 1   titleType       86210 non-null  object \n",
-      " 2   primaryTitle    86210 non-null  object \n",
-      " 3   originalTitle   86210 non-null  object \n",
-      " 4   isAdult         86210 non-null  object \n",
-      " 5   startYear       86210 non-null  float64\n",
-      " 6   endYear         0 non-null      object \n",
-      " 7   runtimeMinutes  86210 non-null  object \n",
-      " 8   genres          86210 non-null  object \n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   tconst          120058 non-null  object \n",
+      " 1   titleType       120058 non-null  object \n",
+      " 2   primaryTitle    120058 non-null  object \n",
+      " 3   originalTitle   120058 non-null  object \n",
+      " 4   isAdult         120058 non-null  object \n",
+      " 5   startYear       120058 non-null  float64\n",
+      " 6   endYear         0 non-null       object \n",
+      " 7   runtimeMinutes  120058 non-null  object \n",
+      " 8   genres          120058 non-null  object \n",
       "dtypes: float64(1), object(8)\n",
-      "memory usage: 6.6+ MB\n"
+      "memory usage: 9.2+ MB\n"
      ]
     }
    ],
