--- a/Walls_Dustin_Project 3 Part 1.ipynb
+++ b/Walls_Dustin_Project 3 Part 1.ipynb
@@ -123,9 +123,7 @@
   {
    "cell_type": "markdown",
    "id": "23c313f7",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Basics df cleanup"
    ]
@@ -133,9 +131,7 @@
   {
    "cell_type": "markdown",
    "id": "10055d78",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Replace \"\\N\" with np.nan"
    ]
@@ -144,9 +140,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2589d5a7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df.replace({'\\\\N':np.nan}, inplace=True)"
@@ -155,9 +149,7 @@
   {
    "cell_type": "markdown",
    "id": "8ae3b6a9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Eliminate movies that are null for runtimeMinutes"
    ]
@@ -166,9 +158,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "bec73e24",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df.dropna(subset=['runtimeMinutes'], inplace=True)"
@@ -177,9 +167,7 @@
   {
    "cell_type": "markdown",
    "id": "4ec63a2f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Eliminate movies that are null for genre"
    ]
@@ -188,9 +176,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "066c6972",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df.dropna(subset=['genres'], inplace=True)"
@@ -199,9 +185,7 @@
   {
    "cell_type": "markdown",
    "id": "c28e7496",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## keep only titleType==Movie"
    ]
@@ -210,9 +194,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "9831c8af",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df = basics_df[basics_df['titleType'] == 'movie']"
@@ -221,9 +203,7 @@
   {
    "cell_type": "markdown",
    "id": "5283c536",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## keep startYear 2000-2022"
    ]
@@ -232,14 +212,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "dbeeef43",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "basics_df['startYear'] = pd.to_numeric(basics_df['startYear'], errors='coerce').astype(float)\n",
+    "#basics_df['startYear'] = pd.to_numeric(basics_df['startYear'], errors='coerce').astype(float)\n",
     "\n",
-    "#basics_df['startYear'] = basics_df['startYear'].astype(float)\n",
+    "basics_df['startYear'] = basics_df['startYear'].astype(float)\n",
     "\n",
     "basics_df = basics_df[(basics_df['startYear'] >= 2000) & (basics_df['startYear'] <= 2022)]"
    ]
@@ -247,9 +225,7 @@
   {
    "cell_type": "markdown",
    "id": "79cdecbc",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Eliminate movies that include \"Documentary\" in genre"
    ]
@@ -258,9 +234,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "04f96283",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df = basics_df[~basics_df['genres'].str.contains('documentary')]"
@@ -269,9 +243,7 @@
   {
    "cell_type": "markdown",
    "id": "f7f9c04a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Keep only US movies"
    ]
@@ -280,9 +252,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "8a81158c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "keepers_df = basics_df['tconst'].isin(akas_df['titleId'])"
@@ -292,9 +262,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "a2aa0300",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df = basics_df[keepers_df]"
@@ -477,9 +445,7 @@
   {
    "cell_type": "markdown",
    "id": "588602ee",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Saving Compressed .csv.gz Files"
    ]
@@ -488,9 +454,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "ac977c2f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "basics_df.to_csv(\"Data/title_basics.csv.gz\",compression='gzip',index=False)"
@@ -500,9 +464,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "05855231",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "akas_df.to_csv(\"Data/title_akas.csv.gz\",compression='gzip',index=False)"
@@ -512,9 +474,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "b6dcf672",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ratings_df.to_csv(\"Data/title_ratings.csv.gz\",compression='gzip',index=False)"
