--- a/Walls_Dustin_Project 3 Part 1.ipynb
+++ b/Walls_Dustin_Project 3 Part 1.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "d537e6b8",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Import and data upload"
    ]
@@ -14,9 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "ec74288c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -26,12 +22,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "4acc79c4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "akas = 'Data/title.akas.tsv.gz'\n",
+    "akas = 'https://datasets.imdbws.com/title.akas.tsv.gz'\n",
     "\n",
     "akas_df = pd.read_csv(akas,sep='\\t', low_memory=False)"
    ]
@@ -40,12 +34,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "4a241a38",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "basics = 'Data/title.basics.tsv.gz'\n",
+    "basics = 'https://datasets.imdbws.com/title.basics.tsv.gz'\n",
     "\n",
     "basics_df = pd.read_csv(basics, sep='\\t', low_memory=False)"
    ]
@@ -54,12 +46,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "47f69fc1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = 'Data/title.ratings.tsv.gz'\n",
+    "ratings = 'https://datasets.imdbws.com/title.ratings.tsv.gz'\n",
     "\n",
     "ratings_df = pd.read_csv(ratings,sep='\\t', low_memory=False)"
    ]
@@ -67,9 +57,7 @@
   {
    "cell_type": "markdown",
    "id": "247513f1",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Akas df cleanup"
    ]
@@ -77,9 +65,7 @@
   {
    "cell_type": "markdown",
    "id": "10712f63",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## keep only US movies"
    ]
@@ -88,20 +74,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "952f95ef",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "akas_df = akas_df[akas_df['region'] == 'US']"
+    "akas_df = akas_df[(akas_df['region'] == 'US')]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6fbad047",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Replace \"\\N\" with np.nan"
    ]
@@ -110,9 +92,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "f10837e5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -147,6 +127,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4e32eb85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_df.replace({'\\\\N':np.nan}, inplace=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8ae3b6a9",
    "metadata": {},
@@ -156,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bec73e24",
    "metadata": {},
    "outputs": [],
@@ -174,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "066c6972",
    "metadata": {},
    "outputs": [],
@@ -192,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9831c8af",
    "metadata": {},
    "outputs": [],
@@ -210,13 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "dbeeef43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#basics_df['startYear'] = pd.to_numeric(basics_df['startYear'], errors='coerce').astype(float)\n",
-    "\n",
     "basics_df['startYear'] = basics_df['startYear'].astype(float)\n",
     "\n",
     "basics_df = basics_df[(basics_df['startYear'] >= 2000) & (basics_df['startYear'] <= 2022)]"
@@ -232,12 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "04f96283",
    "metadata": {},
    "outputs": [],
    "source": [
-    "basics_df = basics_df[~basics_df['genres'].str.contains('documentary')]"
+    "is_documentary = basics_df['genres'].str.contains('documentary', case = False)\n",
+    "basics_df = basics_df[~is_documentary]"
    ]
   },
   {
@@ -250,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8a81158c",
    "metadata": {},
    "outputs": [],
@@ -260,12 +249,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a2aa0300",
    "metadata": {},
    "outputs": [],
    "source": [
     "basics_df = basics_df[keepers_df]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "709654a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keepers_df2 = ratings_df['tconst'].isin(akas_df['titleId'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "49dc41ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_df = ratings_df[keepers_df2]"
    ]
   },
   {
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "f27b4f88",
    "metadata": {
     "hidden": true
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "50085f27",
    "metadata": {
     "hidden": true
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "55f8e6da",
    "metadata": {
     "hidden": true
@@ -337,40 +346,36 @@
   {
    "cell_type": "markdown",
    "id": "30dcda03",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Deliverable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "29ca9295",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1425956 entries, 5 to 35423595\n",
+      "Int64Index: 1436149 entries, 5 to 35873267\n",
       "Data columns (total 8 columns):\n",
       " #   Column           Non-Null Count    Dtype \n",
       "---  ------           --------------    ----- \n",
-      " 0   titleId          1425956 non-null  object\n",
-      " 1   ordering         1425956 non-null  int64 \n",
-      " 2   title            1425956 non-null  object\n",
-      " 3   region           1425956 non-null  object\n",
-      " 4   language         3871 non-null     object\n",
-      " 5   types            976603 non-null   object\n",
-      " 6   attributes       46299 non-null    object\n",
-      " 7   isOriginalTitle  1424611 non-null  object\n",
+      " 0   titleId          1436149 non-null  object\n",
+      " 1   ordering         1436149 non-null  int64 \n",
+      " 2   title            1436149 non-null  object\n",
+      " 3   region           1436149 non-null  object\n",
+      " 4   language         3922 non-null     object\n",
+      " 5   types            978749 non-null   object\n",
+      " 6   attributes       46546 non-null    object\n",
+      " 7   isOriginalTitle  1434804 non-null  object\n",
       "dtypes: int64(1), object(7)\n",
-      "memory usage: 97.9+ MB\n"
+      "memory usage: 98.6+ MB\n"
      ]
     }
    ],
@@ -380,32 +385,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "6481662a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 120058 entries, 34803 to 9730848\n",
+      "Int64Index: 86688 entries, 34803 to 9842230\n",
       "Data columns (total 9 columns):\n",
-      " #   Column          Non-Null Count   Dtype  \n",
-      "---  ------          --------------   -----  \n",
-      " 0   tconst          120058 non-null  object \n",
-      " 1   titleType       120058 non-null  object \n",
-      " 2   primaryTitle    120058 non-null  object \n",
-      " 3   originalTitle   120058 non-null  object \n",
-      " 4   isAdult         120058 non-null  object \n",
-      " 5   startYear       120058 non-null  float64\n",
-      " 6   endYear         0 non-null       object \n",
-      " 7   runtimeMinutes  120058 non-null  object \n",
-      " 8   genres          120058 non-null  object \n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   tconst          86688 non-null  object \n",
+      " 1   titleType       86688 non-null  object \n",
+      " 2   primaryTitle    86688 non-null  object \n",
+      " 3   originalTitle   86688 non-null  object \n",
+      " 4   isAdult         86688 non-null  object \n",
+      " 5   startYear       86688 non-null  float64\n",
+      " 6   endYear         0 non-null      object \n",
+      " 7   runtimeMinutes  86688 non-null  object \n",
+      " 8   genres          86688 non-null  object \n",
       "dtypes: float64(1), object(8)\n",
-      "memory usage: 9.2+ MB\n"
+      "memory usage: 6.6+ MB\n"
      ]
     }
    ],
@@ -415,26 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "2f6f9114",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 493732 entries, 0 to 1294996\n",
+      "Int64Index: 498034 entries, 0 to 1309270\n",
       "Data columns (total 3 columns):\n",
       " #   Column         Non-Null Count   Dtype  \n",
       "---  ------         --------------   -----  \n",
-      " 0   tconst         493732 non-null  object \n",
-      " 1   averageRating  493732 non-null  float64\n",
-      " 2   numVotes       493732 non-null  int64  \n",
+      " 0   tconst         498034 non-null  object \n",
+      " 1   averageRating  498034 non-null  float64\n",
+      " 2   numVotes       498034 non-null  int64  \n",
       "dtypes: float64(1), int64(1), object(1)\n",
-      "memory usage: 15.1+ MB\n"
+      "memory usage: 15.2+ MB\n"
      ]
     }
    ],
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "ac977c2f",
    "metadata": {},
    "outputs": [],
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "05855231",
    "metadata": {},
    "outputs": [],
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "b6dcf672",
    "metadata": {},
    "outputs": [],
