--- a/Walls_Dustin_Project 3_Pt 2.b.ipynb
+++ b/Walls_Dustin_Project 3_Pt 2.b.ipynb
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "financial_df.to_csv(f\"tmdb_results_combined.csv.gz\", compression=\"gzip\", index=False)"
+    "financial_info.to_csv(f\"tmdb_results_combined.csv.gz\", compression=\"gzip\", index=False)"
    ]
   }
  ],
