--- a/Walls_Dustin_Project 3_Pt 3.ipynb
+++ b/Walls_Dustin_Project 3_Pt 3.ipynb
@@ -1673,7 +1673,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1d4cb278f70>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1eeeb323d90>"
       ]
      },
      "execution_count": 26,
@@ -1863,7 +1863,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1d4c25dd910>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1eee1cdee50>"
       ]
      },
      "execution_count": 31,
@@ -2280,6 +2280,80 @@
    "source": [
     "# Save title_genres table to SQL\n",
     "title_genres.to_sql('title_genres',engine,if_exists='replace',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fecfb685",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tables_in_movies_v2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>genres</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>title_basics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>title_genres</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>title_ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tmdb_data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Tables_in_movies_v2\n",
+       "0              genres\n",
+       "1        title_basics\n",
+       "2        title_genres\n",
+       "3       title_ratings\n",
+       "4           tmdb_data"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"SHOW TABLES;\"\"\"\n",
+    "pd.read_sql(query, engine)"
    ]
   }
  ],
