--- a/Walls_Dustin_Project 3_Pt 2.a.ipynb
+++ b/Walls_Dustin_Project 3_Pt 2.a.ipynb
@@ -63,9 +63,15 @@
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
+       " 'final_tmdb_data_2000.csv.gz',\n",
+       " 'final_tmdb_data_2001.csv.gz',\n",
        " 'title_akas.csv.gz',\n",
        " 'title_basics.csv.gz',\n",
-       " 'title_ratings.csv.gz']"
+       " 'title_ratings.csv.gz',\n",
+       " 'tmdb_api_results_2000.json',\n",
+       " 'tmdb_api_results_2001.json',\n",
+       " 'tmdb_api_results_2018.json',\n",
+       " 'tmdb_results_combined.csv.gz']"
       ]
      },
      "execution_count": 3,
@@ -324,7 +330,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Avengers',\n",
        " 'overview': 'When an unexpected enemy emerges and threatens global safety and security, Nick Fury, director of the international peacekeeping agency known as S.H.I.E.L.D., finds himself in need of a team to pull the world back from the brink of disaster. Spanning the globe, a daring recruitment effort begins!',\n",
-       " 'popularity': 106.527,\n",
+       " 'popularity': 99.992,\n",
        " 'poster_path': '/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg',\n",
        " 'production_companies': [{'id': 420,\n",
        "   'logo_path': '/hUzeosd33nzE5MCNsZxCGEKTXaQ.png',\n",
@@ -344,8 +350,8 @@
        " 'tagline': 'Some assembly required.',\n",
        " 'title': 'The Avengers',\n",
        " 'video': False,\n",
-       " 'vote_average': 7.707,\n",
-       " 'vote_count': 28554,\n",
+       " 'vote_average': 7.708,\n",
+       " 'vote_count': 28580,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -379,7 +385,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Notebook',\n",
        " 'overview': \"An epic love story centered around an older man who reads aloud to a woman with Alzheimer's. From a faded notebook, the old man's words bring to life the story about a couple who is separated by World War II, and is then passionately reunited, seven years later, after they have taken different paths.\",\n",
-       " 'popularity': 53.789,\n",
+       " 'popularity': 48.303,\n",
        " 'poster_path': '/rNzQyW4f8B8cQeg7Dgj3n6eT5k9.jpg',\n",
        " 'production_companies': [{'id': 12,\n",
        "   'logo_path': '/5ThIuO93vsk47oexKTSdfKEr7EC.png',\n",
@@ -403,7 +409,7 @@
        " 'title': 'The Notebook',\n",
        " 'video': False,\n",
        " 'vote_average': 7.879,\n",
-       " 'vote_count': 10310,\n",
+       " 'vote_count': 10324,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -444,12 +450,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dac7bd57bcae4734a7ad69b3303221be",
+       "model_id": "40e65a10cde54dffb2f90b12605b0475",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "YEARS:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "YEARS:   0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -458,12 +464,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03f774074acd490e8d166b59874f2cb1",
+       "model_id": "cb3fac3b3b694d8dbcb3d59b68c0d804",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/1448 [00:00<?, ?it/s]"
+       "Movies from 2021:   0%|          | 0/5124 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -472,12 +478,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d98ed7ee8464b83921818f9d3309028",
+       "model_id": "4da6ccf71c81445587460303ae4958a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2001:   0%|          | 0/1570 [00:00<?, ?it/s]"
+       "Movies from 2022:   0%|          | 0/4968 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed1b038a6f3b4c23892705cca0747e42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2023: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
