--- a/Walls_Dustin_Project 3_Pt 3.ipynb
+++ b/Walls_Dustin_Project 3_Pt 3.ipynb
@@ -1673,7 +1673,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1eeeb323d90>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1ac2f577fa0>"
       ]
      },
      "execution_count": 26,
@@ -1825,6 +1825,7 @@
    "outputs": [],
    "source": [
     "# Create a schema dictonary using Sqlalchemy datatype objects\n",
+    "key_len = ratings[\"tconst\"].fillna(\"\").map(len).max()\n",
     "rating_schema = {\n",
     "    'tconst': String(key_len+1),\n",
     "    'averagerating': Float(),\n",
@@ -1863,7 +1864,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1eee1cdee50>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1ac2f577340>"
       ]
      },
      "execution_count": 31,
@@ -1995,6 +1996,27 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "3e513114",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1ac2f577130>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.execute('ALTER TABLE genres ADD PRIMARY KEY (`Genre_ID`);')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "99dcfe63",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2084,7 @@
        "4  Biography         4"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "d683b012",
    "metadata": {},
    "outputs": [
@@ -2111,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "ded6754b",
    "metadata": {},
    "outputs": [],
@@ -2123,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "51e0b792",
    "metadata": {},
    "outputs": [],
@@ -2139,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "c632f544",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2171,7 @@
        "637"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
+   "id": "c8251eff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1ac238e9fa0>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.execute('ALTER TABLE tmdb_data ADD PRIMARY KEY (`imdb_id`);')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "0e10da1b",
    "metadata": {},
    "outputs": [
@@ -2195,38 +2238,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>tt0035423</td>\n",
+       "      <td>48000000.0</td>\n",
+       "      <td>76019000.0</td>\n",
+       "      <td>PG-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>tt0113026</td>\n",
        "      <td>10000000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0118589</td>\n",
+       "      <td>22000000.0</td>\n",
+       "      <td>5271670.0</td>\n",
+       "      <td>PG-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0118652</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>tt0118694</td>\n",
        "      <td>150000.0</td>\n",
        "      <td>12855000.0</td>\n",
        "      <td>PG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tt0119273</td>\n",
-       "      <td>15000000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tt0120263</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>80334.0</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tt0120467</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>14904.0</td>\n",
-       "      <td>R</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2234,14 +2277,14 @@
       ],
       "text/plain": [
        "     imdb_id      budget     revenue certification\n",
-       "0  tt0113026  10000000.0         0.0          None\n",
-       "1  tt0118694    150000.0  12855000.0            PG\n",
-       "2  tt0119273  15000000.0         0.0             R\n",
-       "3  tt0120263         0.0     80334.0          None\n",
-       "4  tt0120467    120000.0     14904.0             R"
+       "0  tt0035423  48000000.0  76019000.0         PG-13\n",
+       "1  tt0113026  10000000.0         0.0          None\n",
+       "2  tt0118589  22000000.0   5271670.0         PG-13\n",
+       "3  tt0118652   1000000.0         0.0             R\n",
+       "4  tt0118694    150000.0  12855000.0            PG"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "93d0ef8a",
    "metadata": {},
    "outputs": [
@@ -2272,7 +2315,7 @@
        "161946"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,8 +2326,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "033549de",
+   "metadata": {},
+   "source": [
+    "<b> Show all tables <b>\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "fecfb685",
    "metadata": {},
    "outputs": [
@@ -2346,7 +2398,7 @@
        "4           tmdb_data"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
